name:                callwords
version:             0.1.0.0
synopsis:            All ham-radio call sign words
description:         Please see README.org
homepage:            http://github.com/dysinger/callwords#README.org
license:             BSD3
license-file:        LICENSE
author:              Tim Dysinger
maintainer:          tim@dysinger.net
copyright:           2016 Tim Dysinger
category:            Web
build-type:          Simple
extra-source-files:  README.org
cabal-version:       >=1.10

executable callwords
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , containers
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/dysinger/callwords
